--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,24 +5,203 @@
 
 /* LES VARIABLES CSS ICI */
 
+:root{
+    /* TYPO */
+    --font-primaire:'Cardo', serif;
+    --font-secondaire:'Bungee Shade', cursive;
+
+    /* COULEURS */
+    --couleur-blanc:white;
+    --couleur-noir:black;
+
+    --degrade-principal:linear-gradient(35.74deg, rgba(167, 2, 154, 0.6) -2.92%, rgba(167, 2, 154, 0) 106.13%);
+}
+
 /*---------------------- Generic ----------------------*/
 
 /* Mettre la ligne universelle pour le box-sizing */
+*, *::before, *::after{
+    box-sizing:border-box;
+}
 
+h1,h2{
+    font-family: var(--font-secondaire);
+    color:var(--couleur-blanc);
 
+    margin:0;
+}
+
+li{
+    list-style: none;
+}
+
+/* H1 */
+h1{
+    font-size: 36px;
+}
+
+h2{
+    font-size: 80px;
+}
+
+/* a ET HOVER */
+
+a{
+    color:var(--couleur-blanc);
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+    color:#A7029A;
+}
 
 /*---------------------- Elements ----------------------*/
 
+body{
+    font-family: var(--font-primaire);
+    font-size: 18px;
+
+    margin:0;
+}
 
 
 
 
 /*---------------------- Components ----------------------*/
 
+.conteneur{
+    max-width:1140px;
+    margin:0 auto;
+}
 
+/* HEADER */
+.header-principal{
+    background:var(--couleur-noir);
 
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 3;
+}
 
+/* HERO */
+.hero{
+    height:80vh;
+    position:relative;
 
+    background-color:var(--couleur-noir);
+}
 
+.hero video{
+    height:100%;
+    width:100%;
+
+    object-fit:cover;
+    opacity:0.5;
+}
+
+.hero .content{
+    width:100%;
+    height:100%;
+
+    position:absolute;
+    top:0;
+    left:0;
+    z-index: 2;
+
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background:var(--degrade-principal);
+}
+
+.hero .content p{
+    color:var(--couleur-blanc);
+}
+
+/* INTERET */
+.interet{
+    background-image:url("../images/bg-interet.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    padding:66px 0 82px;
+    text-align: center;
+}
+
+.interet .conteneur h3{
+    font-size:40px;
+    text-transform: uppercase;
+    text-align:center;
+    font-weight:bold;
+}
+
+.interet .conteneur h4{
+    text-transform: uppercase;
+    font-weight:bold;
+}
+
+.conteneur .cartes{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.cartes .carte{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width:28%;
+    height:367px;
+    margin-top:45px;
+    padding:20px;
+
+    background-color: var(--couleur-blanc);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.carte img{
+    width:100%;
+    height:100%;
+}
+
+/* CITATION */
+.citation{
+    background-image:url("../images/bg-citation.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    padding:100px 0 142px;
+}
+
+.citation .conteneur{
+    display: flex;
+    flex-direction: column;
+
+    color:var(--couleur-blanc);
+}
+.citation .conteneur h3{
+    font-size: 40px;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    margin:0;
+}
+/* FOOTER */
+
+.footer-principal{
+    background:var(--couleur-noir);
+    padding:60px;
+}
+
+.footer-principal .copyright p{
+    color:var(--couleur-blanc);
+    text-align: center;
+}
 /*---------------------- Utilities ----------------------*/
 
